--- a/scss/variables/_mixins.scss
+++ b/scss/variables/_mixins.scss
@@ -5,7 +5,7 @@
     display: inline;
     font-size: $tamanioLetra;
     font-weight: bold;
-    padding: 22px 22px;
+    padding: 20px 20px;
     text-transform: $mayuscula;
     line-height: 22px;
     text-align: center;
